# NestFuzz

./: Makefile  README.md  afl-analyze  afl-analyze.c  afl-as  afl-fuzz  afl-fuzz.c  afl-fuzz.h  afl-gcc  afl-gotcpu  afl-showmap  afl-tmin  alloc-inl.h  bitmap.c  cJSON.h  chunk.h  config.h  extras.c  fuzz_one.c  globals.c  hashMap.c  hashMap.h  init.c  isi.py  pre_fuzz.c  queue.c  run.c  signals.c  stats.c  structure_mutation.c  structure_mutation.h  utils.c
ipl-modeling/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.sh  loopTest
ipl-modeling/common/src/: cond_stmt_base.rs  defs.rs  log_data.rs  tag.rs
ipl-modeling/compiler/: CMakeLists.txt  test_clang.c
ipl-modeling/dfsan_rt/: CMakeLists.txt  dfsan_interface.h
ipl-modeling/dfsan_rt/dfsan/: CMakeLists.txt  dfsan.cpp  dfsan.h  dfsan_custom.cpp  dfsan_flags.inc  dfsan_interceptors.cpp  dfsan_platform.h  done_abilist.txt
ipl-modeling/dfsan_rt/interception/: CMakeLists.txt
ipl-modeling/dfsan_rt/sanitizer_common/: CMakeLists.txt
ipl-modeling/external_lib/: io_func.c
ipl-modeling/include/: abilist.h  defs.h
ipl-modeling/libcxx/: compile.sh
ipl-modeling/pass/: CMakeLists.txt  CMakeLists.txt.bak  DFSanPass.cc  DFSan_changes.patch  DFSan_changes_new_16.cpp  DataFlowSanitizer.cpp  DataFlowSanitizer.cpp.bak  DataFlowSanitizer.h  DataFlowSanitizer_nestfuzz_origin.cpp  LHPass.cpp  LoopHandlingPass.cpp
ipl-modeling/rules/: angora_abilist.txt  exploitation_list.txt
ipl-modeling/runtime/: Cargo.toml
ipl-modeling/runtime/include/: loop_handlers.h  tag_set.h
ipl-modeling/runtime/src/: ffds.rs  len_label.rs  lib.rs  logger.rs  loop_handlers.rs  loop_handlers_wrap.rs  stats.rs  tag_set_wrap.rs
ipl-modeling/test/: -g  apiTest.c  basic.c  checksum.c  core  crafted-jpg  crafted-jpg.json  crafted-jpg2  crafted-png  dfsan_test.c  dump_labels.c  file  file.json  indirect_call.c  io_test.c  loopTest  loopTest.c  my_iso_image.iso  protoChunkTest  protoChunkTest.c  protoLoopTest.c  simple_loop_test.c  target-config.md  test_iso.c  thread1.cc  thread2.cc
libfuzzer/: model_driver.cc
llvm_mode/: afl-clang-fast.c  afl-llvm-pass.so.cc
